<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:textColor="@color/red"
            android:textSize="28sp"
            android:layout_marginTop="70dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textEmail"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txtAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textAge"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/weight"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textWeight"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/height"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textHeight"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textPass"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/txtPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/reenter"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/textPass2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:backgroundTint="@color/gradientBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <!-- SSO google login -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:padding="10dp"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/googleSignInBtn"
            android:onClick="signInWithGoogle">

            <ImageView
                android:id="@+id/googleLogo"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/google_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/submit"
            android:backgroundTint="@color/textBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/backBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/back"
            android:backgroundTint="@color/textBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/logout_button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="Logout"
            android:backgroundTint="@color/textBlue"
            android:fontFamily="@font/poppins_bold"
            android:textSize="18sp"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>