<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white1"
    tools:context=".ScheduleDose">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Step and instruction text views -->
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step2"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/red"
                android:textSize="24sp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/schedule_text"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/cafe"
                android:textSize="20sp"
                android:layout_marginBottom="16dp" />

            <!-- Medicine name input -->
            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when_to_take"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/doseInput"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="12:00-23:00"
                android:inputType="datetime"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:drawableRight="@drawable/time"/>

            <!-- Dosage input -->
            <TextView
                android:id="@+id/oftenLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_often"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/oftenInput"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="Daily"
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:drawableRight="@drawable/calendar"/>

            <!-- Frequency input -->
            <TextView
                android:id="@+id/dosesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_many"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="4dp" />

            <EditText
                android:id="@+id/quantityInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edit_text_background"
                android:drawableRight="@drawable/manydose"
                android:hint="1"
                android:inputType="number"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>
    </ScrollView>


    <!-- FrameLayout to overlay text on ImageButton -->
    <FrameLayout
        android:id="@+id/scheduleBtnContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ImageButton with the image -->
        <ImageButton
            android:id="@+id/scheduleDoseBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:background="@null" />

        <!-- TextView overlaying the image -->
        <TextView
            android:id="@+id/scheduleDoseBtnText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/schedule_dose"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/poppins_bold" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>